--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4044001991823095"
      crossorigin="anonymous"></script>
+  <meta name="google-site-verification" content="HO2XvO8JNrJ31aQQiU3ufHEkFu9iKkc9rUfviwGFjLc" />
 
 </head>
 <body>
